# Portfoliio-site

./: .gitignore  Cargo.toml  flake.nix  flake.nix.bak  layout.kdl  run  shell.nix
assets/shaders/: Noise.wgsl  RealTimeCloud.wgsl  cloud.wgsl  cloud_blob.wgsl  cubemap_unlit.wgsl  psrdnoise.wgsl  skybox.wgsl
sdf_gen/: Cargo.toml
sdf_gen/src/: main.rs
src/: camera.rs  cloud.rs  cloud_blob.rs  cloud_gen.rs  cloud_shader.rs  fin_cloud.rs  main.rs  noise.rs  noise_shader.rs  rm_cloud.rs  sdf.rs  skybox.rs  test_cloud_shader.rs  water.rs
