[package]
name = "resume"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9.0", features = ["wayland",  "hdr",  "png",   "jpeg",  "bmp", "ktx2",  ]}
bevy-inspector-egui = "*"
bevy_prototype_debug_lines = { version = "*", features = ["3d"] }
bevy_fly_camera = {git = "https://github.com/mcpar-land/bevy_fly_camera"}
