[package]
name = "resume"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "*", features = ["wayland",  "hdr",  "png",   "jpeg",  "bmp", "ktx2",  ]}
bevy-inspector-egui = "*"
bevy_fly_camera = "0.10.0"
ordered-float = "*"
itertools = "*"
rand = "*"
rayon = "*"
antidote = "*"
